examples/failing/f007-lexer.sq
{
  var x$: u32;
  print32(x);
}
